# flowtrail

./: .gitignore  README.md  config.py  pyproject.toml  setup.py
assets/shaders/: basic.frag  basic.vert  skybox.frag  skybox.vert
flowtrail/: app.py  camera.py  colors.py  cuboid.py  fps.py  glfw.py  input.py  mesh.py  physics.py  rectangle.py  renderer.py  scene.py  skybox.py  smartvector.py  sphere.py  terrain.py  transformations.py  triangles.py  window.py
